# sdl_test

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
dependencies/rerror/: CMakeLists.txt
dependencies/rerror/include/rerror/: error.hpp  error_formatter.hpp  location_formatter.hpp
dependencies/string_extension/: CMakeLists.txt
dependencies/string_extension/include/string_extension/: string_extension.hpp
dependencies/string_extension/src/: string_extension.cpp
dependencies/unders_helpers/: CMakeLists.txt
dependencies/unders_helpers/include/unders_helpers/: bitmasks.hpp  term_colors.hpp  types.hpp  unused.hpp
include/: game.hpp
include/core/: application.hpp  renderer.hpp  window.hpp
src/: game.cpp  main.cpp
src/core/: application.cpp  renderer.cpp  window.cpp
